syntax = "proto3";

package user.v1;

option go_package = "example.com/mygrpcapp/user/v1;userpb";

message User {
    //string id = 1;
    int32 id = 1;
    string email = 2;
    //string full_name = 2;
    //int64 birth_year = 3;

    //optional uint32  salary         = 4;
    //repeated Address addresses      = 5;
    //MaritalStatus    marital_status = 6;
}

message Address {
    string street = 1;
    string city   = 2;
}

enum MaritalStatus {
    SINGLE = 0;
    MARRIED = 1;
    DIVORCED = 2;
}


service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {};
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {};
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {};
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
  string email = 1;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string email = 2;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message ListUsersRequest {
}

message ListUsersResponse {
  repeated User users = 1;
}
